# notion-rustport

./: .env  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: configure.rs  generator.rs  lib.rs  main.rs  task.rs
src/task/: block.rs
tests/: integration_test.rs
tests/test_files/: config_test.json
