[package]
name = "notion-daily-rustport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envfile = "0.2.1"
futures = "0.3.28"
notion = "0.5.1"
openssl = { version = "0.10", features = ["vendored"] }
tokio = "1.29.1"
